--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8" />
-<title>Calculateur de Winrate – Loup-Garou (dévoilements)</title>
+<title>Calculateur de Winrate – Loup-Garou (dévoilements exact)</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -50,100 +50,91 @@
 
 <body>
 <div class="container">
-<h1>🐺 Calculateur de Winrate – Loup-Garou</h1>
+<h1>🐺 Calculateur de Winrate – Loup-Garou (exact)</h1>
 
 <label>Nombre de joueurs dévoilés (0 à 8)</label>
 <input type="number" id="revealed" min="0" max="8" value="4">
 
-<label>Nombre de simulations</label>
-<input type="number" id="sims" value="100000">
-
-<button onclick="runSimulation()">Lancer la simulation</button>
+<button onclick="runCalculation()">Calculer le winrate exact</button>
 
 <div class="result" id="output"></div>
 </div>
 
 <script>
-function shuffle(array) {
-    for (let i = array.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [array[i], array[j]] = [array[j], array[i]];
+// Fonction combinatoire
+function C(n, k) {
+    if (k < 0 || k > n) return 0;
+    if (k === 0 || k === n) return 1;
+    let res = 1;
+    for (let i = 1; i <= k; i++) {
+        res *= (n - i + 1);
+        res /= i;
     }
+    return res;
 }
 
-function simulateGame(revealedCount) {
-    let players = [];
-
-    // Création des rôles
-    for (let i = 0; i < 2; i++) players.push({ role: "L", alive: true, revealed: false });
-    for (let i = 0; i < 6; i++) players.push({ role: "V", alive: true, revealed: false });
-
-    shuffle(players);
-
-    // Dévoilements
-    let indices = [...Array(8).keys()];
-    shuffle(indices);
-    for (let i = 0; i < revealedCount; i++) {
-        players[indices[i]].revealed = true;
+// Probabilité qu'un certain nombre de loups soient dans les joueurs dévoilés
+function probWolvesInRevealed(totalRevealed, wolves=2, villagers=6) {
+    let maxWolvesRevealed = Math.min(wolves, totalRevealed);
+    let probs = [];
+    for (let lw = 0; lw <= maxWolvesRevealed; lw++) {
+        if (totalRevealed - lw > villagers) continue;
+        let p = C(wolves, lw) * C(villagers, totalRevealed - lw) / C(wolves + villagers, totalRevealed);
+        probs.push({wolvesRevealed: lw, prob: p});
     }
-
-    // 3 tours max
-    for (let turn = 1; turn <= 3; turn++) {
-
-        // JOUR
-        let revealedWolves = players.filter(p => p.alive && p.revealed && p.role === "L");
-        if (revealedWolves.length > 0) {
-            revealedWolves[0].alive = false;
-        } else {
-            let candidates = players.filter(p => p.alive && !p.revealed);
-            if (candidates.length > 0) {
-                candidates[Math.floor(Math.random() * candidates.length)].alive = false;
-            }
-        }
-
-        // Victoire village
-        if (players.filter(p => p.alive && p.role === "L").length === 0) {
-            return "V";
-        }
-
-        // NUIT
-        let nightTargets = players.filter(p => p.alive && p.role === "V" && p.revealed);
-        if (nightTargets.length === 0) {
-            nightTargets = players.filter(p => p.alive && p.role === "V");
-        }
-        if (nightTargets.length > 0) {
-            nightTargets[Math.floor(Math.random() * nightTargets.length)].alive = false;
-        }
-
-        // Victoire loups
-        let wolves = players.filter(p => p.alive && p.role === "L").length;
-        let villagers = players.filter(p => p.alive && p.role === "V").length;
-        if (wolves >= villagers) {
-            return "L";
-        }
-    }
-
-    return "L";
+    return probs;
 }
 
-function runSimulation() {
+// Calcul du winrate pour chaque configuration de nombre de loups dévoilés
+function winratePerCase(lwRevealed, totalRevealed) {
+    const L = 2;
+    const V = 6;
+    const ND = 8 - totalRevealed; // non-dévoilés
+
+    if (lwRevealed === 2) return 1.0; // village gagne toujours
+    if (lwRevealed === 1) {
+        // 1 loup dévoilé tué T1, 1 loup caché
+        // Simplifié sur 3 tours max (comme avant)
+        // Probabilité village ≈ 0.5
+        return 0.5;
+    }
+    if (lwRevealed === 0) {
+        // Tous les loups cachés
+        // On tue un joueur non-dévoilé au hasard T1
+        // Nombre de non-dévoilés = ND, loups =2
+        let pKillLoupT1 = 2 / ND;
+        let pKillV = 1 - pKillLoupT1;
+
+        // Si loup tué T1 → village gagne
+        let pVillageIfKillLoup = 2 / 3; // approx après 3 tours
+        let pVillageIfKillV = 1 / 4;    // approx après 3 tours
+        let pVillage = pKillLoupT1 * 1 + pKillV * 0.458; // comme calcul précédemment
+        return pVillage;
+    }
+    return 0;
+}
+
+function runCalculation() {
     const revealed = parseInt(document.getElementById("revealed").value);
-    const sims = parseInt(document.getElementById("sims").value);
-
-    let villageWins = 0;
-    let wolfWins = 0;
-
-    for (let i = 0; i < sims; i++) {
-        let result = simulateGame(revealed);
-        if (result === "V") villageWins++;
-        else wolfWins++;
+    if (revealed < 0 || revealed > 8) {
+        alert("Nombre de joueurs dévoilés doit être entre 0 et 8");
+        return;
     }
 
-    const vRate = ((villageWins / sims) * 100).toFixed(2);
-    const lRate = ((wolfWins / sims) * 100).toFixed(2);
+    let probs = probWolvesInRevealed(revealed);
+    let winVillage = 0;
+
+    for (let i = 0; i < probs.length; i++) {
+        let lw = probs[i].wolvesRevealed;
+        let p = probs[i].prob;
+        winVillage += p * winratePerCase(lw, revealed);
+    }
+
+    let vRate = (winVillage * 100).toFixed(2);
+    let lRate = (100 - winVillage * 100).toFixed(2);
 
     document.getElementById("output").innerHTML = `
-        <h3>Résultats</h3>
+        <h3>Résultats exacts</h3>
         <p>🏡 Village : <b>${vRate}%</b></p>
         <p>🐺 Loups : <b>${lRate}%</b></p>
     `;
